Block mailto: begins

--- a/src/windows/setup.html
+++ b/src/windows/setup.html
@@ -79,6 +79,8 @@
           <div class="col s2">
             <input type="checkbox" id="hidecursor" />
             <label for="hidecursor" >Hide Cursor</label>
+            <input type="checkbox" id="disablemailto" />
+            <label for="disablemailto" >Disable mailto: links</label>
           </div>
           <div class="col s2">
             <input type="checkbox" id="disablecontextmenu" />
